this fixes #5446 (abstract link is visible in toc even on child objects that don't have one) - jquery selector too broad. also fixed positioning of the "Read" and "Download" buttons to be top-aligned.
also slowed down carousel to 5 seconds we'll see.

this needs merging into 1.0-stable.

git-svn-id: https://pacps01.oecd.org/svn/publication-index/trunk@284 370d6576-d9c0-ee4c-9843-071cdce0ebce

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -524,6 +524,7 @@ div.toc-row-header {
 }
 #toc-root > .toc-row > .toc-row-header > .links{
     position:absolute;
+    top: 0;
     right:0.5em;
     bottom:-2px; /* FIXME: this is petty pixel-tweaking ... I don't like it, but I don't know how to center the buttons vertically otherwise */   
 }
